--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </style>
 </head>
 <body class="bg-gray-900 text-gray-200 font-sans">
-<!-- Header/Navigation -->
+ Header/Navigation
 <header class="fixed w-full bg-gray-900/90 backdrop-blur-sm z-50 shadow-lg">
   <div class="container mx-auto px-6 py-4">
     <div class="flex justify-between items-center">
