--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DevFreelancer - Tworzenie Stron WWW</title>
+  <title>Tworzenie Stron WWW</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
@@ -49,12 +49,12 @@
   </style>
 </head>
 <body class="bg-gray-900 text-gray-200 font-sans">
- Header/Navigation
+
 <header class="fixed w-full bg-gray-900/90 backdrop-blur-sm z-50 shadow-lg">
   <div class="container mx-auto px-6 py-4">
     <div class="flex justify-between items-center">
       <a href="#" class="text-2xl font-bold text-blue-400 hover:text-blue-300 transition-colors">
-        <span class="text-white">Dev</span>Freelancer
+        <span class="text-white">DGrochowski</span>_BudowaStron
       </a>
 
       <button id="mobile-menu-button" class="md:hidden text-blue-400 focus:outline-none">
@@ -102,7 +102,7 @@
       <div class="md:w-1/2 flex justify-center fade-in">
         <div class="relative">
           <div class="absolute -inset-4 bg-blue-400/20 rounded-2xl blur-lg"></div>
-          <img src="https://images.unsplash.com/photo-1571171637578-41bc2dd41cd2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=880&q=80"
+          <img src="./public/g.jpg"
                alt="Programista przy pracy"
                class="relative w-full max-w-md rounded-2xl shadow-2xl border-2 border-blue-400/30">
         </div>
@@ -122,18 +122,26 @@
       <div class="md:w-1/3 flex justify-center fade-in">
         <div class="relative">
           <div class="absolute -inset-4 bg-blue-400/20 rounded-full blur-lg"></div>
-          <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=774&q=80"
+          <img src="./public/s.jpg"
                alt="Zdjęcie profilowe"
                class="relative w-64 h-64 rounded-full object-cover border-4 border-blue-400/30 shadow-xl">
         </div>
       </div>
 
       <div class="md:w-2/3 fade-in">
-        <h3 class="text-2xl font-bold mb-6">Cześć, jestem <span class="text-blue-400">Marek Kowalski</span></h3>
+        <h3 class="text-2xl font-bold mb-6">Cześć, jestem <span class="text-blue-400">Dawid Grochowski</span></h3>
         <p class="text-gray-400 mb-4 text-lg">
-          Jestem freelancerem specjalizującym się w tworzeniu nowoczesnych stron internetowych.
-          Od ponad 5 lat pomagam klientom w budowaniu ich wizerunku online poprzez estetyczne
-          i funkcjonalne rozwiązania.
+          Cześć, jestem Dawid Grochowski
+          Jestem freelancerem zajmującym się tworzeniem nowoczesnych stron internetowych. Od ponad dwóch lat pomagam firmom i osobom prywatnym zaistnieć w sieci – projektuję estetyczne, funkcjonalne i dopasowane do potrzeb użytkowników strony, które świetnie prezentują się zarówno na komputerze, jak i na telefonie.
+          Moja praca to połączenie kreatywności z technologią – dbam nie tylko o to, by strona wyglądała profesjonalnie, ale też by działała szybko, płynnie i była łatwa w obsłudze.
+          Na co dzień korzystam z technologii takich jak
+          <span style="color: #000000">HTML5</span> – to język, który pozwala "zbudować szkielet" strony, podobnie jak konstrukcja domu – dzięki niemu każda część strony ma swoje miejsce.
+          <br/><span style="color: #000000">CSS3</span> – odpowiada za wygląd strony – kolory, układ, czcionki. Dzięki niemu witryna wygląda nowocześnie i estetycznie.
+          <br/><span style="color: #000000">JavaScript</span> – pozwala dodać do strony interaktywność – np. przyciski, animacje, formularze czy dynamiczne treści.
+          <br/><span style="color: #000000">React</span> – to nowoczesne narzędzie, które pomaga tworzyć bardziej zaawansowane strony i aplikacje internetowe, np. sklepy online, systemy rezerwacji, platformy kursowe. Dzięki niemu wszystko działa szybciej i sprawniej.
+          <br/><span style="color: #000000">Next.js</span> – to rozszerzenie Reacta, które sprawia, że strony wczytują się bardzo szybko i są lepiej widoczne w wyszukiwarkach takich jak Google – to szczególnie ważne, jeśli zależy Ci na dotarciu do większej liczby odbiorców.
+          <br/><br/><span style="color: #000000">RWD</span> – oznacza, że strona dopasowuje się automatycznie do wielkości ekranu – wygląda i działa świetnie na komputerze, tablecie i smartfonie.
+          Jeśli chcesz stworzyć stronę, która będzie Twoją wizytówką w internecie – chętnie pomogę.
         </p>
         <p class="text-gray-400 mb-6 text-lg">
           Moją pasją jest łączenie designu z technologią, tworząc produkty, które nie tylko wyglądają
@@ -151,7 +159,7 @@
           </div>
           <div class="flex items-center bg-gray-700/50 px-4 py-2 rounded-lg">
             <i class="fas fa-mobile-alt text-blue-400 mr-2"></i>
-            <span>Responsywność</span>
+            <span>RWD</span>
           </div>
         </div>
       </div>
@@ -220,12 +228,12 @@
              alt="Projekt 1"
              class="w-full h-48 object-cover">
         <div class="p-6">
-          <h3 class="text-xl font-bold mb-2">Sklep internetowy</h3>
-          <p class="text-gray-400 mb-4">Kompleksowy sklep internetowy z systemem płatności i panelem administracyjnym.</p>
+          <h3 class="text-xl font-bold mb-2"></h3>
+          <p class="text-gray-400 mb-4"></p>
           <div class="flex flex-wrap gap-2 mb-4">
-            <span class="bg-blue-400/20 text-blue-400 px-3 py-1 rounded-full text-sm">React</span>
-            <span class="bg-blue-400/20 text-blue-400 px-3 py-1 rounded-full text-sm">Node.js</span>
-            <span class="bg-blue-400/20 text-blue-400 px-3 py-1 rounded-full text-sm">MongoDB</span>
+            <span class="bg-blue-400/20 text-blue-400 px-3 py-1 rounded-full text-sm"></span>
+            <span class="bg-blue-400/20 text-blue-400 px-3 py-1 rounded-full text-sm"></span>
+            <span class="bg-blue-400/20 text-blue-400 px-3 py-1 rounded-full text-sm"></span>
           </div>
           <a href="#" class="text-blue-400 hover:text-blue-300 font-medium inline-flex items-center">
             Zobacz więcej <i class="fas fa-arrow-right ml-2"></i>
@@ -239,12 +247,12 @@
              alt="Projekt 2"
              class="w-full h-48 object-cover">
         <div class="p-6">
-          <h3 class="text-xl font-bold mb-2">Strona portfolio</h3>
-          <p class="text-gray-400 mb-4">Nowoczesne portfolio dla fotografa z galerią i systemem zarządzania treścią.</p>
+          <h3 class="text-xl font-bold mb-2"></h3>
+          <p class="text-gray-400 mb-4"></p>
           <div class="flex flex-wrap gap-2 mb-4">
-            <span class="bg-blue-400/20 text-blue-400 px-3 py-1 rounded-full text-sm">Next.js</span>
-            <span class="bg-blue-400/20 text-blue-400 px-3 py-1 rounded-full text-sm">TailwindCSS</span>
-            <span class="bg-blue-400/20 text-blue-400 px-3 py-1 rounded-full text-sm">Sanity.io</span>
+            <span class="bg-blue-400/20 text-blue-400 px-3 py-1 rounded-full text-sm"></span>
+            <span class="bg-blue-400/20 text-blue-400 px-3 py-1 rounded-full text-sm"></span>
+            <span class="bg-blue-400/20 text-blue-400 px-3 py-1 rounded-full text-sm"></span>
           </div>
           <a href="#" class="text-blue-400 hover:text-blue-300 font-medium inline-flex items-center">
             Zobacz więcej <i class="fas fa-arrow-right ml-2"></i>
@@ -258,12 +266,12 @@
              alt="Projekt 3"
              class="w-full h-48 object-cover">
         <div class="p-6">
-          <h3 class="text-xl font-bold mb-2">Aplikacja biznesowa</h3>
-          <p class="text-gray-400 mb-4">System do zarządzania zadaniami i projektami dla małych zespołów.</p>
+          <h3 class="text-xl font-bold mb-2"></h3>
+          <p class="text-gray-400 mb-4"></p>
           <div class="flex flex-wrap gap-2 mb-4">
-            <span class="bg-blue-400/20 text-blue-400 px-3 py-1 rounded-full text-sm">Vue.js</span>
-            <span class="bg-blue-400/20 text-blue-400 px-3 py-1 rounded-full text-sm">Firebase</span>
-            <span class="bg-blue-400/20 text-blue-400 px-3 py-1 rounded-full text-sm">Vuetify</span>
+            <span class="bg-blue-400/20 text-blue-400 px-3 py-1 rounded-full text-sm"></span>
+            <span class="bg-blue-400/20 text-blue-400 px-3 py-1 rounded-full text-sm"></span>
+            <span class="bg-blue-400/20 text-blue-400 px-3 py-1 rounded-full text-sm"></span>
           </div>
           <a href="#" class="text-blue-400 hover:text-blue-300 font-medium inline-flex items-center">
             Zobacz więcej <i class="fas fa-arrow-right ml-2"></i>
@@ -277,12 +285,12 @@
              alt="Projekt 4"
              class="w-full h-48 object-cover">
         <div class="p-6">
-          <h3 class="text-xl font-bold mb-2">Landing page</h3>
-          <p class="text-gray-400 mb-4">Strona docelowa dla startupu technologicznego z wysoką konwersją.</p>
+          <h3 class="text-xl font-bold mb-2"></h3>
+          <p class="text-gray-400 mb-4"></p>
           <div class="flex flex-wrap gap-2 mb-4">
-            <span class="bg-blue-400/20 text-blue-400 px-3 py-1 rounded-full text-sm">HTML5</span>
-            <span class="bg-blue-400/20 text-blue-400 px-3 py-1 rounded-full text-sm">CSS3</span>
-            <span class="bg-blue-400/20 text-blue-400 px-3 py-1 rounded-full text-sm">JavaScript</span>
+            <span class="bg-blue-400/20 text-blue-400 px-3 py-1 rounded-full text-sm"></span>
+            <span class="bg-blue-400/20 text-blue-400 px-3 py-1 rounded-full text-sm"></span>
+            <span class="bg-blue-400/20 text-blue-400 px-3 py-1 rounded-full text-sm"></span>
           </div>
           <a href="#" class="text-blue-400 hover:text-blue-300 font-medium inline-flex items-center">
             Zobacz więcej <i class="fas fa-arrow-right ml-2"></i>
@@ -296,12 +304,12 @@
              alt="Projekt 5"
              class="w-full h-48 object-cover">
         <div class="p-6">
-          <h3 class="text-xl font-bold mb-2">Blog technologiczny</h3>
-          <p class="text-gray-400 mb-4">Platforma blogowa z systemem komentarzy i rekomendacji artykułów.</p>
+          <h3 class="text-xl font-bold mb-2"></h3>
+          <p class="text-gray-400 mb-4"></p>
           <div class="flex flex-wrap gap-2 mb-4">
-            <span class="bg-blue-400/20 text-blue-400 px-3 py-1 rounded-full text-sm">Gatsby</span>
-            <span class="bg-blue-400/20 text-blue-400 px-3 py-1 rounded-full text-sm">GraphQL</span>
-            <span class="bg-blue-400/20 text-blue-400 px-3 py-1 rounded-full text-sm">Contentful</span>
+            <span class="bg-blue-400/20 text-blue-400 px-3 py-1 rounded-full text-sm"></span>
+            <span class="bg-blue-400/20 text-blue-400 px-3 py-1 rounded-full text-sm"></span>
+            <span class="bg-blue-400/20 text-blue-400 px-3 py-1 rounded-full text-sm"></span>
           </div>
           <a href="#" class="text-blue-400 hover:text-blue-300 font-medium inline-flex items-center">
             Zobacz więcej <i class="fas fa-arrow-right ml-2"></i>
@@ -315,12 +323,12 @@
              alt="Projekt 6"
              class="w-full h-48 object-cover">
         <div class="p-6">
-          <h3 class="text-xl font-bold mb-2">System rezerwacji</h3>
-          <p class="text-gray-400 mb-4">Aplikacja do rezerwacji wizyt z integracją kalendarza i powiadomień.</p>
+          <h3 class="text-xl font-bold mb-2"></h3>
+          <p class="text-gray-400 mb-4"></p>
           <div class="flex flex-wrap gap-2 mb-4">
-            <span class="bg-blue-400/20 text-blue-400 px-3 py-1 rounded-full text-sm">Angular</span>
-            <span class="bg-blue-400/20 text-blue-400 px-3 py-1 rounded-full text-sm">NestJS</span>
-            <span class="bg-blue-400/20 text-blue-400 px-3 py-1 rounded-full text-sm">PostgreSQL</span>
+            <span class="bg-blue-400/20 text-blue-400 px-3 py-1 rounded-full text-sm"></span>
+            <span class="bg-blue-400/20 text-blue-400 px-3 py-1 rounded-full text-sm"></span>
+            <span class="bg-blue-400/20 text-blue-400 px-3 py-1 rounded-full text-sm"></span>
           </div>
           <a href="#" class="text-blue-400 hover:text-blue-300 font-medium inline-flex items-center">
             Zobacz więcej <i class="fas fa-arrow-right ml-2"></i>
