--- a/index.html
+++ b/index.html
@@ -356,32 +356,29 @@
         <div class="space-y-6">
           <div class="flex items-center text-gray-400">
             <i class="fas fa-envelope text-blue-400 mr-4 text-xl"></i>
-            <span>kontakt@devfreelancer.pl</span>
+            <span>groszek96@groszekdeveloper.com</span>
           </div>
           <div class="flex items-center text-gray-400">
             <i class="fas fa-phone-alt text-blue-400 mr-4 text-xl"></i>
-            <span>+48 123 456 789</span>
+            <span>+48 516 459 508</span>
           </div>
           <div class="flex items-center text-gray-400">
             <i class="fas fa-map-marker-alt text-blue-400 mr-4 text-xl"></i>
-            <span>Warszawa, Polska</span>
+            <span>Cybinka, Polska</span>
           </div>
         </div>
 
         <div class="mt-12">
           <h4 class="text-xl font-bold mb-6">Znajdź mnie w social media</h4>
           <div class="flex space-x-6">
-            <a href="#" class="text-gray-400 hover:text-blue-400 text-2xl transition-colors">
+            <a href="https://github.com/dawid24214" class="text-gray-400 hover:text-blue-400 text-2xl transition-colors">
               <i class="fab fa-github"></i>
             </a>
-            <a href="#" class="text-gray-400 hover:text-blue-400 text-2xl transition-colors">
+            <a href="https://www.linkedin.com/in/dawid-grochowski-3a0264322/" class="text-gray-400 hover:text-blue-400 text-2xl transition-colors">
               <i class="fab fa-linkedin-in"></i>
             </a>
-            <a href="#" class="text-gray-400 hover:text-blue-400 text-2xl transition-colors">
-              <i class="fab fa-twitter"></i>
-            </a>
-            <a href="#" class="text-gray-400 hover:text-blue-400 text-2xl transition-colors">
-              <i class="fab fa-instagram"></i>
+            <a href="https://www.facebook.com/profile.php?id=61565338720044" class="text-gray-400 hover:text-blue-400 text-2xl transition-colors">
+              <i class="fab fa-facebook"></i>
             </a>
           </div>
         </div>
@@ -420,27 +417,25 @@
     <div class="flex flex-col md:flex-row justify-between items-center">
       <div class="mb-6 md:mb-0">
         <a href="#" class="text-2xl font-bold text-blue-400 hover:text-blue-300 transition-colors">
-          <span class="text-white">Dev</span>Freelancer
+          <span class="text-white">DGrochowski</span>_BudowaStron
         </a>
       </div>
 
       <div class="flex space-x-6 mb-6 md:mb-0">
-        <a href="#" class="text-gray-400 hover:text-blue-400 transition-colors">
+        <a href="https://github.com/dawid24214" class="text-gray-400 hover:text-blue-400 transition-colors">
           <i class="fab fa-github text-xl"></i>
         </a>
-        <a href="#" class="text-gray-400 hover:text-blue-400 transition-colors">
+        <a href="https://www.linkedin.com/in/dawid-grochowski-3a0264322/" class="text-gray-400 hover:text-blue-400 transition-colors">
           <i class="fab fa-linkedin-in text-xl"></i>
         </a>
-        <a href="#" class="text-gray-400 hover:text-blue-400 transition-colors">
-          <i class="fab fa-twitter text-xl"></i>
-        </a>
-        <a href="#" class="text-gray-400 hover:text-blue-400 transition-colors">
-          <i class="fab fa-instagram text-xl"></i>
+
+        <a href="https://www.facebook.com/profile.php?id=61565338720044" class="text-gray-400 hover:text-blue-400 transition-colors">
+          <i class="fab fa-facebook text-xl"></i>
         </a>
       </div>
 
       <div class="text-gray-400 text-sm">
-        &copy; 2025 DevFreelancer. Wszystkie prawa zastrzeżone.Strona Wykonana Przez Dawida Grochowskiego
+        &copy; 2025 DawidGrochowski. Wszystkie prawa zastrzeżone.Strona Wykonana Przez Dawida Grochowskiego
       </div>
     </div>
   </div>
